--- a/link.html
+++ b/link.html
@@ -5,6 +5,6 @@
     <title>リンク</title>
   </head>
   <body>
-    I love <a href=https://www.it-chiba.ac.jp/faculty/social/pm/>PM</a>!
+    I love <a href="https://www.it-chiba.ac.jp/faculty/social/pm/">PM</a>!
   </body>
 </html>
