--- a/image.html
+++ b/image.html
@@ -5,7 +5,8 @@
     <title>リンク</title>
   </head>
   <body>
-    <img src="ilovepm.png" alt="I love pmの写真"
+    <img src="basket.jpg" alt="バスケットボールの写真"
     style="width:300px;"/>
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Ryoki oto</span> を著作者とするこの 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズの 表示 - 継承 4.0 国際 ライセンス</a>で提供されています。
   </body>
 </html>
